# AgentCore

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  agentcore.sync.yaml.example  install.sh  pyproject.toml  pytest-audit.txt  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
ai-toolstack/: README.md  install.sh
ai-toolstack/config/: auto-install-agentcore.env.sh  auto-install.env.sh  auto-update.env.sh  cursor-hooks.json.template  headroom-env.sh  mcp-lazy-servers.json.template  mcp.json.template
ai-toolstack/docs/: cursor-rules-and-skills.md  data-sovereignty-no-cloud-exfiltration.md  headroom-integration.md  llm-gateway-graphify-internal-task.md  mcp-lazy-debug.md  model-invoked-skills-audit.md  ponytail-cursor-stack.md  token-optimization-overview.md  token-optimization-summary.md
ai-toolstack/hooks/: check-summary-hashes.sh  mcp-ensure-toolchain.sh  ponytail-output-stats.sh  rtk-cursor-hook.sh
ai-toolstack/lib/: compression_lanes.py  git_changes.py  headroom_mcp_guard.py  internal_guard.sh  log.sh  mcp-lazy-debug-preload.cjs  mcp-lazy-debug.sh  mcp-lazy-token-stats.cjs  paths.sh  resolve-node.sh
ai-toolstack/scripts/: ai-toolstack.sh  compression-lanes-real-test.mjs  compression-lanes-stress-test.mjs  demo-headroom-real.mjs  ensure-host-deps.sh  generate-cursor-agent-manifest.sh  install-agentcore.sh  list-model-invoked-skills.py  log-ponytail-output-stats.py  mcp-backend-probe.mjs  mcp-lazy-diagnose.sh  patch-mcp-lazy-debug.py  patch-mcp-lazy-execute-aliases.py  purge-legacy-graph-paths.sh  (+12 more)
backend/: README.md
docs/: README.md
scripts/: build-wheelhouse.sh  ensure-venv.sh  finish_soft_budget_cleanup.py  get-agentcore.sh  git-sync.local.env.example  optional_docs_enrichment.py  remediate_docs_standards.py  split_soft_budget_docs.py  stamp_docs_revision.py
tests/: README.md
(+1455 files in other folders)
