[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcore"
version = "0.1.0"
description = "AgentCore control-plane CLI and shared packages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.138.1",
  "uvicorn==0.49.0",
  "pydantic==2.13.4",
  "httpx==0.28.1",
  "psycopg[binary]==3.3.4",
  "neo4j==5.28.2",
  "tree-sitter==0.25.2",
  "tree-sitter-javascript==0.25.0",
  "tree-sitter-typescript==0.23.2",
  "tree-sitter-go==0.25.0",
  "tree-sitter-rust==0.24.0",
  "litellm>=1.40.0,<2",
  "rank-bm25==0.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "httpx2==2.5.0",
]
embeddings = [
  "sentence-transformers>=3.0.0,<6",
]
graph-analytics = [
  "scikit-network>=0.32,<0.34",
  "scipy>=1.11,<2",
  "numpy>=1.26,<3",
]

[project.scripts]
agentcore = "agentcore_cli.main:main"

[tool.setuptools]
package-dir = {"" = "backend/packages"}
packages = ["agentcore_cli", "usage_profile", "outbox_relay", "llm_gateway", "port_profile"]

[tool.pytest.ini_options]
testpaths = ["tests"]
